--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://www.viviendastecnohouse.com.ar/storage/img/logo.png"
+      href="https://yt3.ggpht.com/ytc/AIf8zZSheqiu3ftKcLQdOGEziJPH9VO-4RKftde0UglQ=s68-c-k-c0x00ffffff-no-rj"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TecnoHouse Pañol</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="manifest" href="./public/manifest.json" />
+    <title>Tecnohouse Pañol</title>
   </head>
   <body>
     <div id="root"></div>
